tests/suppress_default/suppress_default.exp
Error ----------------------------------------------------------------------------------------------------- test.js:29:2

Cannot cast `3` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:29:2
   29| (3 : string);  // error
        ^ [1]

References:
   test.js:29:6
   29| (3 : string);  // error
            ^^^^^^ [2]



Found 1 error
